<resources>
    <string name="app_name">Tasarim Proje</string>
    <string name="btnUyeOl">ÜYE OL</string>
    <string name="btnGirisSayfasinaDon">GİRİŞ SAYFASINA DÖN</string>
    <string name="btnGirisYap">GİRİŞ YAP</string>
    <string name="sifremi_unuttum">sifremi unuttum</string>
    <string name="kayit_ol">kayıt ol</string>
    <string name="logo_image_description">logo</string>
    <string name="beni_hatirla">Beni Hatırla</string>
    <string name="hesabin_yokmu">Bir hesabın yok mu?</string>
    <string name="hesap_olustur">Hesap Oluştur</string>
    <string name="isim">isim</string>
    <string name="soyisim">soyisim</string>
    <string name="eposta">E-posta</string>
    <string name="parola">Parola</string>
    <string name="telefonNumarasi">Telefon Numarası</string>
    <string name="meslek">Meslek</string>
    <string name="tcNumarasi">TC Kimlik Numarası</string>
    <string name="hesap_bilgilerim">Hesap Bilgilerim</string>
    <string name="hosgeldiniz">HOŞ GELDİNİZ</string>
    <string name="ornekmail">example@gmail.com</string>
    <string name="yildiz">*******</string>
    <string name="eposta_giriniz">E-postanızı giriniz.</string>
    <string name="linkgonder">Link Gönder</string>
    <string name="bilgi_duzenle">Bilgirimi düzenle</string>
    <string name="hesap_sil">Hesabımı Sil</string>
    <string name="bilgi_guncelle">Bilgilerimi Güncelle</string>
    <string name="bilgiGuncelle_Yazı">Hesap Bilgilerimi Düzenle</string>
    <string name="personel_girisi">Personel Girişi</string>
    <string name="arama">arama</string>
    <string name="duyuru_ekle">DUYURU EKLE</string>
    <string name="anasayfa">ANASAYFA</string>
    <string name="kitabi_arayin_veya_barkodunu_okutun">Kitabı arayın veya barkodunu okutun.</string>
    <string name="todo">TODO</string>
    <string name="okur_ekle">OKUR EKLE</string>
    <string name="okur_girisi">OKUR GİRİŞİ</string>
    <string name="personel_giris">PERSONEL GİRİŞİ</string>
    <string name="okuyucu_ekle">OKUYUCU EKLE</string>
    <string name="ad">Adı:</string>
    <string name="adres">Adres:</string>
    <string name="kaydet">kaydet</string>
    <string name="kitap_ekle">KİTAP EKLE</string>
    <string name="kitap_barkodu">kitap barkodu:</string>
    <string name="kitap_raf_yeri">kitap raf yeri:</string>
    <string name="kitap_turu">Kitap Türü:</string>
    <string name="basim_tarihi">Basım Tarihi:</string>
    <string name="kitabin_yazari">Kitabın Yazarı:</string>
    <string name="yayin_evi">Yayın Evi:</string>
    <string name="kitabin_adi">Kitabın Adı:</string>
    <string name="kullanici_bilgilerim">Kullanici Bilgilerim</string>
    <string name="cikis_yap">ÇIKIŞ YAP</string>
    <string name="kitap_barkodunu_okutunuz">Kitap Barkodunu Okutunuz</string>

</resources>