<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/logo"
    tools:context=".OkurBilgiGuncelle">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/logo"
        app:layout_constraintStart_toStartOf="parent">


        <LinearLayout
            android:id="@+id/firstLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/birHesabınYokmu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="80dp"
                android:text="@string/bilgiGuncelle_Yazı"
                android:textColor="@android:color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/bgIsim"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/kayitol_background_edit"
                    android:hint="@string/isim"
                    android:inputType="textPersonName"
                    android:padding="15dp"
                    app:layout_constraintTop_toBottomOf="@+id/firstLinearLayout"
                    tools:ignore="TextContrastCheck"
                    android:autofillHints="" />

                <EditText
                    android:id="@+id/bgSoyisim"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:background="@drawable/kayitol_background_edit"
                    android:hint="@string/soyisim"
                    android:inputType="text"
                    android:padding="15dp"
                    android:layout_marginTop="15dp"
                    app:layout_constraintTop_toBottomOf="@+id/firstLinearLayout"
                    android:autofillHints="" />
            </LinearLayout>

            <EditText
                android:id="@+id/bgMail"
                android:layout_width="340dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/kayitol_background_edit"
                android:hint="@string/eposta"
                android:inputType="textEmailAddress"
                android:padding="15dp"
                tools:ignore="TextContrastCheck"
                android:autofillHints="" />


            <EditText
                android:id="@+id/bgTelefonNumarasi"
                android:layout_width="340dp"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:digits="0123456789"
                android:maxLength="10"
                android:hint="@string/telefonNumarasi"
                android:layout_marginStart="15dp"
                android:padding="15dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/kayitol_background_edit"
                android:autofillHints="" />

            <EditText
                android:id="@+id/bgMeslek"
                android:layout_width="340dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:inputType="text"
                android:background="@drawable/kayitol_background_edit"
                android:hint="@string/meslek"
                android:padding="15dp"
                tools:ignore="TextContrastCheck"
                android:autofillHints="" />
            <EditText
                android:id="@+id/bgTckimlik"
                android:layout_width="340dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:background="@drawable/kayitol_background_edit"
                android:hint="@string/tcNumarasi"
                android:inputType="number"
                android:padding="15dp"
                android:layout_marginTop="15dp"
                android:autofillHints="" />


            <Button
                android:id="@+id/btnBilgiGuncelle"
                android:layout_width="340dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="60dp"
                android:background="@drawable/girissayfasigirisyapbtnedit"
                android:text="@string/bilgi_guncelle"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                tools:ignore="VisualLintButtonSize" />

            <Button
                android:id="@+id/btnGirisSayfasinaDon"
                android:layout_width="340dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:background="@drawable/kayitolgirisyapsayfasinadonbtnedit"
                android:text="@string/btnGirisSayfasinaDon"
                android:textSize="18sp"
                android:textColor="@color/girisyap"
                android:textStyle="bold"
                tools:ignore="VisualLintButtonSize" />


        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>